@@ -1,6 +1,6 @@
 .\" Manpage for valentina.
 .\" Contact dismine@gmail.com to correct errors.
-.TH valentina 1 "30 March, 2019" "valentina man page"
+.TH valentina 1 "4 July, 2019" "valentina man page"
 .SH NAME
 Valentina \- Pattern making program.
 .SH SYNOPSIS
@@ -188,6 +188,8 @@ The path to output destination folder. By default the directory at which the app
 .RB "Page bottom margin in current units like 3.0 (" "export mode" "). If not set will be used value from default printer. Or 0 if none printers was found."
 .IP "--followGrainline"
 .RB "Order detail to follow grainline direction (" "export mode" ").
+.IP "--nestQuantity"
+.RB "Nest quantity copies of each piece (" "export mode" ").
 .IP "-c, --crop"
 .RB "Auto crop unused length (" "export mode" ")."
 .IP "-u, --unite"
