@@ -225,6 +225,7 @@ VLayoutGeneratorPtr VCommandLine::DefaultGenerator() const
 
     diag.SetFields(margins);
     diag.SetFollowGrainline(IsOptionSet(LONG_OPTION_FOLLOW_GRAINLINE));
+    diag.SetNestQuantity(IsOptionSet(LONG_OPTION_NEST_QUANTITY));
     diag.SetNestingTime(OptNestingTime());
     diag.SetEfficiencyCoefficient(OptEfficiencyCoefficient());
 
@@ -655,6 +656,8 @@ void VCommandLine::InitCommandLineOptions()
     //=================================================================================================================
         {LONG_OPTION_FOLLOW_GRAINLINE,
          translate("VCommandLine", "Order detail to follow grainline direction (export mode).")},
+        {LONG_OPTION_NEST_QUANTITY,
+         translate("VCommandLine", "Nest quantity copies of each piece (export mode).")},
         {{SINGLE_OPTION_CROP, LONG_OPTION_CROP},
          translate("VCommandLine", "Auto crop unused length (export mode).")},
         {{SINGLE_OPTION_UNITE, LONG_OPTION_UNITE},
