@@ -130,6 +130,8 @@ const QString LONG_OPTION_FOLLOW_GRAINLINE = QStringLiteral("followGrainline");
 
 const QString LONG_OPTION_LANDSCAPE_ORIENTATION = QStringLiteral("landscapeOrientation");
 
+const QString LONG_OPTION_NEST_QUANTITY = QStringLiteral("nestQuantity");
+
 //---------------------------------------------------------------------------------------------------------------------
 /**
  * @brief AllKeys return list with all command line keys (short and long forms). Used for testing on conflicts.
@@ -181,6 +183,7 @@ QStringList AllKeys()
         LONG_OPTION_TILED_PDF_BOTTOM_MARGIN,
         LONG_OPTION_TILED_PDF_LANDSCAPE,
         LONG_OPTION_FOLLOW_GRAINLINE,
-        LONG_OPTION_LANDSCAPE_ORIENTATION
+        LONG_OPTION_LANDSCAPE_ORIENTATION,
+        LONG_OPTION_NEST_QUANTITY
     };
 }
