@@ -21,6 +21,7 @@
 - Move Tool options and Group menu to Window section.
 - Raise the minimum value for curve approximation to 0.2.
 - Make piece labels transparent.
+- New layout option --nestQuantity.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
